fixes some warnings
- removes "'Automatic-Module-Name' header is required .."  warnings
- removes "constructor .. is deprecated"  warnings
- fixes type safety warnings
- removes unused imports
- fixes deprecated inputevent issues
- fixes deprecated KNIME issues
- fixes deprecated Class.newInstance() warnings