@@ -182,7 +182,7 @@ class TableColumnAdjuster implements PropertyChangeListener, TableModelListener
 			width = Math.max(width, tableColumn.getPreferredWidth());
 		}
 
-		columnSizes.put(tableColumn, new Integer(tableColumn.getWidth()));
+		columnSizes.put(tableColumn, Integer.valueOf(tableColumn.getWidth()));
 		table.getTableHeader().setResizingColumn(tableColumn);
 		tableColumn.setWidth(width);
 	}
